Downgrade to Java 8 (#271)
* Downgrade to Java 8

* changelog