@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2018-2020 Expedia, Inc.
+ * Copyright (C) 2018-2021 Expedia, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,10 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
 import static org.junit.Assert.assertThat;
 
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+
+import lombok.val;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -35,7 +36,7 @@ public class AvroObjectModuleTest {
 
   @Test
   public void deserialize() {
-    var objectNode = mapper.createObjectNode()
+    val objectNode = mapper.createObjectNode()
         .put("stringField", "x")
         .put("floatField", 1.0F)
         .put("doubleField", 1.0D)
@@ -46,9 +47,9 @@ public class AvroObjectModuleTest {
         .<ObjectNode>set("objectField", mapper.createObjectNode().put("foo", 1))
         .<ObjectNode>set("arrayField", mapper.createArrayNode().add("bar"));
 
-    var result = mapper.convertValue(objectNode, AvroObject.class);
+    val result = mapper.convertValue(objectNode, AvroObject.class);
 
-    var fields = result.getValue();
+    val fields = result.getValue();
     assertThat(fields.get("stringField"), is("x"));
     assertThat(fields.get("floatField"), is(1.0D));
     assertThat(fields.get("doubleField"), is(1.0D));
@@ -58,11 +59,11 @@ public class AvroObjectModuleTest {
     assertThat(fields.containsKey("nullField"), is(true));
     assertThat(fields.get("nullField"), is(nullValue()));
 
-    var objectField = (AvroObject) fields.get("objectField");
+    val objectField = (AvroObject) fields.get("objectField");
     assertThat(objectField.getValue().size(), is(1));
     assertThat(objectField.getValue().get("foo"), is(1L));
 
-    var arrayField = (AvroArray) fields.get("arrayField");
+    val arrayField = (AvroArray) fields.get("arrayField");
     assertThat(arrayField.getValue().size(), is(1));
     assertThat(arrayField.getValue().get(0), is("bar"));
   }
@@ -74,7 +75,7 @@ public class AvroObjectModuleTest {
 
   @Test
   public void serialize() {
-    var fields = new HashMap<String, Object>();
+    val fields = new HashMap<String, Object>();
     fields.put("stringField", "x");
     fields.put("floatField", 1.0D);
     fields.put("doubleField", 1.0D);
@@ -82,11 +83,11 @@ public class AvroObjectModuleTest {
     fields.put("longField", 1L);
     fields.put("booleanField", true);
     fields.put("nullField", null);
-    fields.put("objectField", new AvroObject(Map.of("foo", 1L)));
-    fields.put("arrayField", new AvroArray(List.of("bar")));
-    var avroObject = new AvroObject(fields);
+    fields.put("objectField", new AvroObject(Collections.singletonMap("foo", 1L)));
+    fields.put("arrayField", new AvroArray(Collections.singletonList("bar")));
+    val avroObject = new AvroObject(fields);
 
-    var result = mapper.convertValue(avroObject, ObjectNode.class);
+    val result = mapper.convertValue(avroObject, ObjectNode.class);
 
     assertThat(result, is(mapper.createObjectNode()
         .put("stringField", "x")
